feat: add favicon to landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -15,6 +15,8 @@
     <meta name="author" content="Tarak Shaw" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://github.com/taraksh01/wisper" />
+    <link rel="icon" type="image/x-icon" href="../assets/icon.ico" />
+    <link rel="icon" type="image/png" href="../assets/icon.png" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -49,7 +51,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.ico" />
+    <link rel="icon" type="image/png" href=..assets/icon.ico" />
     <link
       rel="apple-touch-icon"
       href="https://raw.githubusercontent.com/taraksh01/wisper/main/assets/icon.png"
